# calphy_workflows

./: .gitignore  LICENSE  README.md  pyproject.toml  pytest.ini
.ci_support/: environment.yml
.github/workflows/: tests.yml
notebooks/: Al_free_energy.ipynb  Al_free_energy_executor_demo.ipynb  Al_free_energy_portable.ipynb
notebooks/Aluminium_free_energy/Al_fe/: averaging.log.lammps  conf.equilibration.data  input_file.yaml  integration.log.lammps  metadata.yaml  report.yaml
notebooks/Aluminium_free_energy/Al_ts/: averaging.log.lammps  conf.equilibration.data  input_file.yaml  integration.log.lammps  metadata.yaml  report.yaml  reversible_scaling.log.lammps  ts-input_structure.data-solid-300-0.0.data
src/calphy_workflows/: calculator.py
src/phase_diagram_workflows/: calculator.py  helpers.py
src/phase_diagram_workflows/calphy/: calculator.py
src/phase_diagram_workflows/free_energies/: __init__.py  calculator.py  helpers.py  ti_calculator.py
src/phase_diagram_workflows/structures/: __init__.py  base.py
tests/: test_calphy_solid_fe.py  test_ti_solid_fe.py
