[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "calphy_workflows"
version = "0.1.0"
description = "Workflows to run calphy free energy calculations with executorlib."
authors = [
    { name = "Prabhath Chilakalapudi", email = "prabhath.chilakalapudi@mpi-susmat.de" },
]

readme = "README.md"
license = { file = "LICENSE" }
license-files = ["LICENSE"]
keywords = ["free energy", "thermodynamic integration", "phase diagrams"]
dependencies = [
    "ase",
    "calphy", 
    "pandas",
    "pyiron-lammps",
    "ruamel.yaml"
]

[project.optional-dependencies]
dev = ["pytest", "black", "ruff", "mypy"]
